# advent_of_code

./: .Rhistory  pyproject.toml
2020/: 01_2020.R  02_2020.R  04_2020.R  day8.R
2021_python/: day_1.py
2021_r/: day_1.R  day_10.R  day_11.R  day_2.R  day_3.R  day_4.R  day_6.R  day_7.R  day_8.R
2024/: day_1.py  day_2.py  day_3.py
